--- a/.github/workflows/puzzles.yml
+++ b/.github/workflows/puzzles.yml
@@ -20,7 +20,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  generate_pubbles:
+  generate_puzzles:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
