--- a/.github/workflows/puzzles.yml
+++ b/.github/workflows/puzzles.yml
@@ -53,6 +53,7 @@ jobs:
         run: |
           mkdir -p public/puzzles
           ls -ltr
+          ls -ltr puzzles.zip/
           if [[ -f 'puzzles.zip' ]]; then unzip puzzles.zip -d public/puzzles/; fi
           ls -ltr
           rm -f puzzles.zip
