--- a/.github/workflows/puzzles.yml
+++ b/.github/workflows/puzzles.yml
@@ -52,10 +52,10 @@ jobs:
       - name: Generate puzzles
         run: |
           mkdir -p public/puzzles
-          if [[ -f 'puzzles.zip' ]]; then unzip puzzles.zip -d public/puzzles/; fi
+          if [[ -f 'puzzles.zip' ]]; then unzip -q puzzles.zip -d public/puzzles/; fi
           rm -f puzzles.zip
           python generate.py wordlist-20210729.txt '2020-01-01' 'public/puzzles'
-          zip --junk-paths puzzles.zip public/puzzles/*.json
+          zip --quiet --junk-paths puzzles.zip public/puzzles/*.json
 
       # Ref: https://github.com/actions/starter-workflows/blob/main/pages/static.yml
       - name: Upload artifact
